hotfix: fixed nowrap in pagefind results

--- a/assets/sass/_theme/design-system/search.sass
+++ b/assets/sass/_theme/design-system/search.sass
@@ -133,6 +133,9 @@
         &__result
             list-style: none
             position: relative
+            a,
+            span
+                white-space: pre-wrap
             &-thumb
                 grid-column: 1/4
                 > *
